# ImgConv

./: .gitignore  CMakeLists.txt  README.md
include/: image.h  jpeg_image.h  tiff_image.h
lib/: CMakeLists.txt  bmp_image.h  ico_image.h  jpeg_image.cpp  pack_defines.h  png_image.cpp  png_image.h  ppm_image.cpp  ppm_image.h
src/: bmp_image.cpp  ico_image.cpp  image.cpp  main.cpp  tiff_image.cpp
